--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
+        "build:core": "cross-env TYPE=lib vue-cli-service build --target lib --name index --no-clean lib/index.ts",
+        "build:theme": "cross-env TYPE=lib vue-cli-service build --target lib --name theme-default/index --no-clean lib/theme-default/index.tsx type=lib",
         "test:unit": "vue-cli-service test:unit --coverage",
+        "build": " rimraf dist && npm run build:core && npm run build:theme",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
@@ -36,6 +38,7 @@
         "@vue/eslint-config-typescript": "^7.0.0",
         "@vue/test-utils": "^2.0.0-0",
         "circular-dependency-plugin": "^5.2.2",
+        "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-import": "^2.20.2",
@@ -45,6 +48,7 @@
         "less-loader": "^5.0.0",
         "monaco-editor": "^0.26.1",
         "monaco-editor-webpack-plugin": "^4.1.1",
+        "rimraf": "^3.0.2",
         "typescript": "~4.1.5",
         "vue-jest": "^5.0.0-0"
     }
