--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,30 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "strict": true,
-    "jsx": "preserve",
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "types": [
-      "webpack-env",
-      "jest"
-    ],
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
+    "compilerOptions": {
+        "target": "esnext",
+        "module": "esnext",
+        "strict": true,
+        "jsx": "preserve",
+        "importHelpers": true,
+        "moduleResolution": "node",
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "sourceMap": true,
+        "baseUrl": ".",
+        "types": ["webpack-env", "jest"],
+        "paths": {
+            "@/*": ["src/*"]
+        },
+        "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
-  },
-  "include": [
-    "src/**/*.ts",
-    "lib/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "lib/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
-, "lib/SchemaForm.tsx", "lib/SchemaItem.tsx", "lib/fields/ObjectField.tsx", "lib/fields/ArrayField.tsx", "lib/fields/NumberFields.tsx", "lib/fields/StringField.tsx", "lib/fields/compontents/ArrayItemWrapper.tsx", "lib/widgets/Selection.tsx", "lib/theme-default/TextWidget.tsx"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "include": [
+        "src/**/*.ts",
+        "lib/**/*.ts",
+        "src/**/*.tsx",
+        "src/**/*.vue",
+        "lib/**/*.vue",
+        "tests/**/*.ts",
+        "tests/**/*.tsx"
+    ],
+    "exclude": ["node_modules"]
 }
